--- a/index.css
+++ b/index.css
@@ -1,18 +1,19 @@
-body, html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
+html{
+    position: relative;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    margin-top: 15px;
 }
-body{
-    margin-top:20px;
-    padding: 0; 
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
+body {
+    margin-top: 15px;
+    min-height: 100vh;  /* 100% of screen height */
+    width: 100%;
+    padding: 0;
+    margin: 0;
     background-color: #1A1A1D;
     color: #B0B0B0;
-    position: relative;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 ul,li{
     display: inline;
@@ -22,7 +23,7 @@ ul,li{
     width: 300px;
 }
 .b a{
-    margin-right: 20px;
+    margin-right: 50px;
     color: #B0B0B0;
     text-decoration: none;
     transition: 0.5s ease-in-out;
@@ -39,8 +40,12 @@ ul,li{
     font-family: 'Courier New', Courier, monospace;
 }
 #d{
-    margin-top: 150px;
+    margin-top: 275px;
     position: relative;
+    font-size: larger;
+}
+#d p{
+    font-size: larger;
 }
 #button{
     width: 130px;
@@ -63,10 +68,13 @@ ul,li{
     background-color: #B0B0B0;
     color: #1A1A1D;
     border-radius: 500px;
-    height: 30px;
+    width: 400px;
+    height: 40px;
     transition: 0.5s ease-in-out;
     border: 0;
     width: 60px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 #button1:hover{
     background-color: #1A1A1D;
@@ -76,8 +84,8 @@ ul,li{
 }
 #shape1 img{
     cursor: pointer;
-    width: 350px;
-    height: 350px;
+    width: 600px;
+    height: 600px;
     z-index: 1;
     position: absolute;
     top: 120px;
@@ -89,8 +97,8 @@ ul,li{
     filter: grayscale(100%);
 }
 #shape1 img:hover{
-    width: 360px;
-    height: 360px;
+    width: 610px;
+    height: 610px;
     box-shadow: 0px 0px 200px whitesmoke;
     filter: grayscale(0%);
 }
@@ -107,6 +115,7 @@ ul,li{
 }
 .services p{
     width: 100%;
+    font-size: large;
 }
 #ab{
     width: 250px;
@@ -161,12 +170,21 @@ ul,li{
 .e:hover{
     box-shadow: 0px 0px 20px white;
 }
-.skills p{
+.skills .p1{
     position: absolute;
-    width: 300px;
+    width: 500px;
     right: 40px;
-    top: 25%;
+    top: 15%;
     z-index: 1;
+    font-size: larger;
+}
+.p2{
+    font-size: larger;
+    width: 500px;
+    position: absolute;
+    z-index: 1;
+    top: 65%;
+    right: 40px;
 }
 #ac{
     color: white;
@@ -175,6 +193,7 @@ ul,li{
     color: white;
 }
 .education{
+    margin-top: 7%;
     margin-left: 5%;
     margin-right: 5%;
     transition: appear ease-in-out;
@@ -191,9 +210,9 @@ ul,li{
 }
 .z{
     z-index: 2;
-    margin-left: 10px;
+    margin-left: 20px;
     padding: 5px;
-    width: 20px;
+    width: 30px;
     border-radius: 5px;
     box-shadow: 0px 0px 5px #B0B0B0;
     position: absolute;
@@ -201,9 +220,9 @@ ul,li{
 }
 .y{
     z-index: 2;
-    margin-left: 50px;
+    margin-left: 75px;
     padding: 5px;
-    width: 20px;
+    width: 30px;
     border-radius: 5px;
     box-shadow: 0px 0px 5px #B0B0B0;
     position: absolute;
@@ -213,9 +232,10 @@ ul,li{
     box-shadow: 0px 0px 10px white;
 }
 .education{
+    position: relative;
     margin-left: 5%;
     margin-right: 5%;
-    height: 1000px;
+    height: 100px;
     animation: appear1 ease-in-out;
     animation-timeline: view();
     animation-range: entry 0 cover 40%;
@@ -254,8 +274,8 @@ ul,li{
     z-index: 2;
     top: 10%;
     right: 10%;
-    width: 300px;
-    height: 200px;
+    width: 400px;
+    height: 300px;
     border-radius: 20px;
     border: 2px solid white;
     box-shadow: 0px 0px 100px #B0B0B0;
@@ -267,57 +287,66 @@ ul,li{
     cursor: pointer;
 }
 .school img:hover{
-    width: 310px;
-    height: 210px;
+    width: 410px;
+    height: 310px;
     box-shadow: 0px 0px 200px whitesmoke;
     filter: grayscale(0%);
 }
+.school p{
+    font-size: larger;
+    width: 400px;
+}
 .collage{
-    position: absolute;
+    position: relative;
+    margin-top: 300px;
     margin-left: 5%;
     margin-right: 5%;
     width: 100%;
-    margin-top: 10%;
-    height: 600px;
+    margin-top: 300px;
+    min-height: 600px;
     animation: appear2 ease-in-out;
     animation-timeline: view();
     animation-range: entry 0 cover 40%;
+    z-index: 10;
 }
 .collage .ad{
     z-index: 100;
-    width: 300px;
+    width: 500px;
     position: absolute;
     top: 8%;
-    right: 20%;
+    right: 10%;
+    font-size: larger;
 }
 .collage .ae{
     z-index: 100;
-    width: 300px;
+    width: 500px;
     position: absolute;
-    top: 31%;
-    right: 20%;
+    top: 28%;
+    right: 10%;
+    font-size: larger;
 }
 .collage .af{
+    font-size: larger;
     z-index: 100;
-    width: 300px;
+    width: 500px;
     position: absolute;
-    top: 56%;
-    right: 20%;
+    top: 53%;
+    right: 10%;
 }
 .collage h3{
     z-index: 100;
     position: absolute;
     top: 0%;
-    right: 40%;
+    right: 41.2%;
 }
 .collage img{
     cursor: pointer;
     position: absolute;
     z-index: 1;
-    top: 30%;
-    left: 5%;
-    width: 300px;
-    height: 200px;
+    top: 10%;
+    left: 0%;
+    width: 500px;
+    height: 400px;
     border-radius: 20px;
     border: 2px solid white;
     box-shadow: 0px 0px 100px #B0B0B0;
@@ -328,170 +357,14 @@ ul,li{
     filter: grayscale(100%);
 }
 .collage img:hover{
-    width: 310px;
-    height: 210px;
+    width: 510px;
+    height: 410px;
     box-shadow: 0px 0px 200px whitesmoke;
     filter: grayscale(0%);
 }
-.about{
+.about {
     background-color: #B0B0B0;
     color: #1A1A1D;
-    padding-left: 20px;
-}
-@media screen and (max-width: 768px) {
-  /* Remove large bottom padding from nav */
-  ul, li {
-    padding-bottom: 0 !important;
-  }
-
-  /* Navbar stays on top but aligns properly */
-  ul {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 10px 20px;
-    margin: 0;
-    list-style: none;
-  }
-
-  .a, .b {
-    display: inline-block;
-    margin: 5px;
-  }
-
-  .b a {
-    font-size: 16px;
-    text-decoration: none;
-    transition: 0.5s ease-in-out;
-  }
-
-  .b a:hover {
-    color: whitesmoke;
-    text-decoration: underline;
-  }
-
-  /* Center the intro section */
-  .intro {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin: 20px;
-  }
-
-  #d {
-    margin-top: 20px;
-    text-align: center;
-  }
-
-  #d h1,
-  #d p {
-    margin: 10px 0;
-    width: 90%;
-  }
-
-  #button1 {
-    display: inline-block;
-    margin: 10px;
-    padding: 8px 20px;
-    border-radius: 30px;
-    background-color: #B0B0B0;
-    color: #1A1A1D;
-    font-size: 14px;
-    border: none;
-    transition: 0.5s ease-in-out;
-  }
-
-  #button1:hover {
-    background-color: #1A1A1D;
-    color: #B0B0B0;
-    box-shadow: 0px 0px 8px #B0B0B0;
-  }
-
-  .z, .y {
-    display: inline-block;
-    width: 25px;
-    margin: 10px 5px;
-    box-shadow: 0px 0px 5px #B0B0B0;
-    transition: 0.5s ease-in-out;
-    position: static;
-  }
-
-  .z:hover,
-  .y:hover {
-    box-shadow: 0px 0px 10px white;
-  }
-
-  #shape1 img {
-    width: 60vw;
-    height: auto;
-    position: static;
-    margin: 20px auto;
-    display: block;
-  }
-
-  /* Skill section fixes */
-  .skill {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 15px;
-    width: 100%;
-    margin: 20px 0;
-  }
-
-  .e {
-    width: 40%;
-    max-width: 150px;
-    padding: 10px;
-    box-sizing: border-box;
-    text-align: center;
-    margin: 0 auto;
-  }
-
-  .e img {
-    width: 100px;
-    height: 100px;
-    margin: 0 auto;
-  }
-
-  .e h3 {
-    font-size: 16px;
-    margin-top: 10px;
-  }
-
-  .skills p {
-    position: static;
-    width: 90%;
-    margin: 20px auto;
-    text-align: justify;
-  }
-
-  /* Education section */
-  .collage, .school {
-    position: static;
-    height: auto;
-    width: 90%;
-    margin: 0 auto 40px auto;
-  }
-
-  .collage img,
-  .school img {
-    position: static;
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-    margin: 20px auto;
-    display: block;
-  }
-
-  .collage .ad,
-  .collage .ae,
-  .collage .af,
-  .collage h3 {
-    position: static;
-    width: 90%;
-    margin: 10px auto;
-    text-align: center;
-  }
+    padding: 30px 20px;
+    margin-top: 1100px;
 }
